Refactor: realizada melhoria do código